2003-09-11  Seth Robertson  <seth@buscemi.sysdetect.com>

	* lib/b_ringbuf.c (bk_ring_length): Function to return current
	size (number of items in) of ring.

2003-09-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* xml/b_minimize.c: Functions (some moved from libfeatureset.c) to
	mimimize and md5 an xml tree.

2003-09-15  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringbuf.c: Make NO_PTHREADS work.

2003-09-02  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_string.c (bk_string_registry_insert_by_id): Function to
	"insert" (ie register) by id but which returns the string.

2003-08-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c: fix for #2036: segfault after connection reset by peer
	(ioh_close): provide indication of ioh validity on return
	(bk_ioh_update): return 2 if ioh destroyed by close
	(bk_ioh_shutdown, ioh_runhandler): deal with ioh destroyed by close

	* lib/b_pollio.c (bk_polling_io_create): deal with ioh destruction
	(bk_polling_io_close): deal with ioh destruction after shutdown

	* lib/b_skid.c (bk_skid_authenticate): deal with ioh destruction

	* ssl/b_ssl.c (bk_ssl_ioh_init): deal with ioh destruction

2003-08-25  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (ioh_internal_read): Move ioh_errno setting BEFORE
	unlock activity, to preserve integrity of the errno.

2003-08-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_error.c (bk_error_irepeater_flush): #2033: eliminate possible
	recursion into non-reentrant error code

2003-08-14  Seth Robertson  <seth@stevedore.sysdetect.com>

	* src/timeout.c: Grrr.  How many years has this lurked?

2003-07-25  James Tanis  <jtt@stevedore.sysdetect.com>

	* lib/b_pollio.c, lib/b_ioh.c: error verbosity and valgrind integration

2003-07-16  Brian Larkins  <brian@stevedore.sysdetect.com>

	* include/libbk_inline.h: arguments to _ko_compare() are [key, obj],
	not [obj, key] otherwise it'd be called _ok_compare(). thanks to
	inlining, this was very annoying and hard to find.