@@ -1,3 +1,8 @@
+2003-09-24  James Tanis  <jtt@pearl.sysdetect.com>
+
+	* src/bk_daemon.c: Added functions to be quiet (ie not print pid
+	in parent) and to open stderr/stdout on a file with optional append.
+
 2003-09-11  Seth Robertson  <seth@buscemi.sysdetect.com>
 
 	* lib/b_ringbuf.c (bk_ring_length): Function to return current
